--- a/en/ch04.md
+++ b/en/ch04.md
@@ -29,19 +29,19 @@ described in this chapter are classified as values.
 
 ## 4.2 The this Keyword
 
-The type of this in an expression depends on the location in which the reference takes place:
+The type of `this` in an expression depends on the location in which the reference takes place:
 
 * In a constructor, instance member function, instance member accessor, or instance member
-variable initializer, this is of the class instance type of the containing class.
-* In a static member function or static member accessor, the type of this is the constructor
+variable initializer, `this` is of the class instance type of the containing class.
+* In a static member function or static member accessor, the type of `this` is the constructor
 function type of the containing class.
-* In a function declaration or a standard function expression, this is of type Any.
-* In the global module, this is of type Any.
+* In a function declaration or a standard function expression, `this` is of type Any.
+* In the global module, `this` is of type Any.
 
 
-In all other contexts it is a compile-time error to reference this.
+In all other contexts it is a compile-time error to reference `this`.
 
-In the body of an arrow function expression, references to this are rewritten in the generated JavaScript
+In the body of an arrow function expression, references to `this` are rewritten in the generated JavaScript
 code, as described in section 4.9.2.
 
 
@@ -67,8 +67,8 @@ target of an assignment).
 
 Literals are typed as follows:
 
-* The type of the null literal is the Null primitive type.
-* The type of the literals true and false is the Boolean primitive type.
+* The type of the `null` literal is the Null primitive type.
+* The type of the literals `true` and `false` is the Boolean primitive type.
 * The type of numeric literals is the Number primitive type.
 * The type of string literals is the String primitive type.
 * The type of regular expression literals is the global interface type `RegExp`.
@@ -119,7 +119,7 @@ signature, the property assignment is contextually typed by the type of the stri
 * Otherwise, the property assignment is processed without a contextual type.
 
 
-The type of a property introduced by a property assignment of the form Name : Expr is the type of Expr.
+The type of a property introduced by a property assignment of the form *Name* : *Expr* is the type of *Expr*.
 
 A get accessor declaration is processed in the same manner as an ordinary function declaration (section
 6.1) with no parameters. A set accessor declaration is processed in the same manner as an ordinary
@@ -137,23 +137,23 @@ If a get accessor is declared for a property, the return type of the get accesso
 property. If only a set accessor is declared for a property, the parameter type (which may be type Any if no
 type annotation is present) of the set accessor becomes the type of the property.
 
-When an object literal is contextually typed by a type that includes a string index signature of type T, the
+When an object literal is contextually typed by a type that includes a string index signature of type *T*, the
 resulting type of the object literal includes a string index signature with the widened form of the best
-common type of T and the types of the properties declared in the object literal. Likewise, when an object
-literal is contextually typed by a type that includes a numeric index signature of type T, the resulting type
+common type of *T* and the types of the properties declared in the object literal. Likewise, when an object
+literal is contextually typed by a type that includes a numeric index signature of type *T*, the resulting type
 of the object literal includes a numeric index signature with the widened form of the best common type of
-T and the types of the numerically named properties (section 3.7.4) declared in the object literal.
+*T* and the types of the numerically named properties (section 3.7.4) declared in the object literal.
 
 
 ## 4.6 Array Literals
 
-In the absence of a contextual type, the type of an array literal is C[], where C is the Undefined type
+In the absence of a contextual type, the type of an array literal is *C*[], where *C* is the Undefined type
 (section 3.2.6) if the array literal is empty, or the best common type of the element expressions if the array
 literal is not empty.
 
 When an array literal is contextually typed (section 4.19) by an object type containing a numeric index
-signature of type T, each element expression is contextually typed by T and the type of the array literal is
-the best common type of T and the types of the element expressions.
+signature of type *T*, each element expression is contextually typed by *T* and the type of the array literal is
+the best common type of *T* and the types of the element expressions.
 
 ## 4.7 Parentheses
 
@@ -163,7 +163,7 @@ A parenthesized expression
 ( Expression )
 ```
 
-has the same type and classification as the Expression itself. Specifically, if the contained expression is
+has the same type and classification as the *Expression* itself. Specifically, if the contained expression is
 classified as a reference, so is the parenthesized expression.
 
 ## 4.8 The super Keyword
@@ -199,20 +199,20 @@ A super property access consists of the keyword super followed by a dot and an i
 accesses are used to access base class member functions from derived classes and are permitted in
 
 
-contexts where this (section 4.2) references a derived class instance or a derived class constructor
+contexts where `this` (section 4.2) references a derived class instance or a derived class constructor
 function. Specifically:
 
 * In a constructor, instance member function, instance member accessor, or instance member
-variable initializer where this references a derived class instance, a super property access is
+variable initializer where `this` references a derived class instance, a super property access is
 permitted and must specify a public instance member function of the base class.
-* In a static member function or static member accessor where this references the constructor
+* In a static member function or static member accessor where `this` references the constructor
 function object of a derived class, a super property access is permitted and must specify a public
 static member function of the base class.
 
 
 Super property accesses are not permitted in other contexts, and it is not possible to access other kinds of
 base class members in a super property access. Note that super property accesses are not permitted
-inside standard function expressions nested in the above constructs because this is of type Any in such
+inside standard function expressions nested in the above constructs because `this` is of type Any in such
 function expressions.
 
 Super property accesses are typically used to access overridden base class member functions from
@@ -255,7 +255,7 @@ except that function expressions do not support overloading.
 
 ### 4.9.1 Standard Function Expressions
 
-Standard function expressions are function expressions written with the function keyword. The type of
+Standard function expressions are function expressions written with the `function` keyword. The type of
 this in a standard function expression is the Any type.
 
 Standard function expressions are transformed to JavaScript in the same manner as function declarations
@@ -264,7 +264,7 @@ Standard function expressions are transformed to JavaScript in the same manner a
 ### 4.9.2 Arrow Function Expressions
 
 TypeScript supports ***arrow function expressions***, a new feature planned for ECMAScript 6. Arrow
-function expressions are a compact form of function expressions that omit the function keyword and
+function expressions are a compact form of function expressions that omit the `function` keyword and
 have lexical scoping of this.
 
 An arrow function expression of the form
@@ -302,9 +302,9 @@ x => { return Math.sin(x); }
 x => Math.sin(x)
 ```
 
-A function expression using the function keyword introduces a new dynamically bound this, whereas
-an arrow function expression preserves the this of its enclosing context. Arrow function expressions are
-particularly useful for writing callbacks, which otherwise often have an undefined or unexpected this.
+A function expression using the function keyword introduces a new dynamically bound `this`, whereas
+an arrow function expression preserves the `this` of its enclosing context. Arrow function expressions are
+particularly useful for writing callbacks, which otherwise often have an undefined or unexpected `this.`
 
 In the example
 
@@ -319,9 +319,9 @@ var messenger = new Messenger();
 messenger.start();
 ```
 
-the use of an arrow function expression causes the callback to have the same this as the surrounding
+the use of an arrow function expression causes the callback to have the same `this` as the surrounding
 `start` method. Writing the callback as a standard function expression it becomes necessary to manually
-arrange access to the surrounding this, for example by copying it into a local variable:
+arrange access to the surrounding `this`, for example by copying it into a local variable:
 
 ```typescript
 class Messenger {
@@ -358,14 +358,14 @@ Function expressions with no type parameters and no parameter or return type ann
 with optional parameters and default parameter values) are contextually typed in certain circumstances, as
 described in section 4.19.
 
-When a function expression is contextually typed by a function type T, the function expression is
-processed as if it had explicitly specified parameter type annotations as they exist in T. Parameters are
+When a function expression is contextually typed by a function type *T*, the function expression is
+processed as if it had explicitly specified parameter type annotations as they exist in *T*. Parameters are
 matched by position and need not have matching names. If the function expression has fewer parameters
-than T, the additional parameters in T are ignored. If the function expression has more parameters than T,
+than *T*, the additional parameters in *T* are ignored. If the function expression has more parameters than *T*,
 the additional parameters are all considered to have type Any.
 
-Furthermore, when a function expression is contextually typed by a function type T, expressions in
-contained return statements (section 5.7) are contextually typed by T's return type.
+Furthermore, when a function expression is contextually typed by a function type *T*, expressions in
+contained return statements (section 5.7) are contextually typed by *T*'s return type.
 
 ## 4.10 Property Access
 
@@ -457,15 +457,15 @@ FuncExpr ( Args )
 FuncExpr < TypeArgs > ( Args )
 ```
 
-where FuncExpr is an expression of a function type or of type Any, TypeArgs is a type argument list
-(section 3.4.2), and Args is an argument list.
+where *FuncExpr* is an expression of a function type or of type Any, *TypeArgs* is a type argument list
+(section 3.4.2), and *Args* is an argument list.
 
-If FuncExpr is of type Any, or of an object type that has no call signatures but is a subtype of the Function
-interface, the call is an ***untyped function call***. In an untyped function call no TypeArgs are permitted, Args
-can be any argument list, no contextual types are provided for the argument expressions, and the result is
+If *FuncExpr* is of type Any, or of an object type that has no call signatures but is a subtype of the Function
+interface, the call is an ***untyped function call***. In an untyped function call no *TypeArgs* are permitted,
+*Args* can be any argument list, no contextual types are provided for the argument expressions, and the result is
 always of type Any.
 
-If FuncExpr's apparent type (section 3.8.1) is a function type, the call is a ***typed function call***. TypeScript
+If *FuncExpr*'s apparent type (section 3.8.1) is a function type, the call is a ***typed function call***. TypeScript
 employs ***overload resolution*** in typed function calls in order to support functions with multiple call
 signatures. Furthermore, TypeScript may perform ***type argument inference*** to automatically determine
 type arguments in generic function calls.
@@ -475,8 +475,8 @@ type arguments in generic function calls.
 
 The purpose of overload resolution in a function call is to ensure that at least one signature is applicable,
 to provide contextual types for the arguments, and to determine the result type of the function call, which
-could differ between the multiple applicable signatures. Overload resolution has no impact on the run-
-time behavior of a function call. Since JavaScript doesn't support function overloading, all that matters at
+could differ between the multiple applicable signatures. Overload resolution has no impact on the run-time
+behavior of a function call. Since JavaScript doesn't support function overloading, all that matters at
 run-time is the name of the function.
 
 The compile-time processing of a typed function call consists of the following steps:
@@ -511,38 +511,38 @@ A signature is said to be an ***applicable signature*** with respect to an argum
 
 * the number of arguments is not less than the number of required parameters,
 * the number of arguments is not greater than the number of parameters, and
-* for each argument expression e and its corresponding parameter P, when e is contextually typed
-(section 4.19) by the type of P, no errors ensue and the type of e is assignable to (section 3.8.4)
-the type of P.
-
+* for each argument expression *e* and its corresponding parameter *P*, when *e* is contextually typed
+(section 4.19) by the type of *P*, no errors ensue and the type of *e* is assignable to (section 3.8.4)
+the type of *P*.
 
 
 ### 4.12.2 Type Argument Inference
 
-Given a signature < T1 , T2 , ... , Tn > ( p1 : P1 , p2 : P2 , ... , pm : Pm ), where each parameter type P references
-zero or more of the type parameters T, and an argument list ( e1 , e2 , ... , em ), the task of type argument
-inference is to find a set of type arguments A1...An to substitute for T1...Tn such that the argument list
+Given a signature < *T<sub>1</sub>* , *T<sub>2</sub>* , ... , *T<sub>n</sub>* > ( *p<sub>1</sub>* : *P<sub>1</sub>* , *p<sub>2</sub>* : *P<sub>2</sub>* , ... , *p<sub>m</sub>* : *P<sub>m</sub>* ), where each
+zero or more of the type parameters *T*, and an argument list
+( *e<sub>1</sub>* , *e<sub>2</sub>* , ... , *e<sub>m</sub>* ), the task of type argument
+inference is to find a set of type arguments *A<sub>1</sub>*...*A<sub>n</sub>* to substitute for *T<sub>1</sub>*...*T<sub>n</sub>* such that the argument list
 becomes an applicable signature.
 
 The inferred type argument for a particular type parameter is determined from a set of candidate types.
-Given a type parameter T, let C denote the widened form (section 3.9) of the best common type (section
-3.10) of the set of candidate types T. Then,
+Given a type parameter *T*, let *C* denote the widened form (section 3.9) of the best common type (section
+3.10) of the set of candidate types *T*. Then,
 
-* If C satisfies T's constraint, the inferred type argument for T is C.
-* Otherwise, the inferred type argument for T is T's constraint.
+* If *C* satisfies *T*'s constraint, the inferred type argument for *T* is *C*.
+* Otherwise, the inferred type argument for *T* is *T*'s constraint.
 
 In order to compute candidate types, the argument list is processed as follows:
 
 * Initially all inferred type arguments are considered ***unfixed*** with an empty set of candidate types.
-* Proceeding from left to right, each argument expression e is ***inferentially*** typed by its
-corresponding parameter type P, possibly causing some inferred type arguments to become
+* Proceeding from left to right, each argument expression *e* is ***inferentially*** typed by its
+corresponding parameter type *P*, possibly causing some inferred type arguments to become
 ***fixed***, and candidate type inferences (section 3.8.6) are made for unfixed inferred type arguments
-from the type computed for e to P.
+from the type computed for *e* to *P*.
 
-The process of inferentially typing an expression e by a type T is the same as that of contextually typing e
-by T, with the following exceptions:
+The process of inferentially typing an expression *e* by a type *T* is the same as that of contextually typing *e*
+by *T*, with the following exceptions:
 
-* Where expressions contained within e would be contextually typed, they are instead inferentially
+* Where expressions contained within *e* would be contextually typed, they are instead inferentially
 typed.
 * Where a contextual type would be included in a candidate set for a best common type (such as
 when inferentially typing an object or array literal), an inferential type is not.
@@ -550,11 +550,11 @@ when inferentially typing an object or array literal), an inferential type is no
 parameter in that expression references type parameters for which inferences are being made, the
 corresponding inferred type arguments to become ***fixed*** and no further candidate inferences are
 made for them.
-* If e is an expression of a function type that contains exactly one generic call signature and no
-other members, and T is a function type with exactly one non-generic call signature and no other
-members, then any inferences made for type parameters referenced by the parameters of T's call
-signature are ***fixed***, and e's type is changed to a function type with e's call signature instantiated
-in the context of T's call signature (section 3.8.5).
+* If *e* is an expression of a function type that contains exactly one generic call signature and no
+other members, and *T* is a function type with exactly one non-generic call signature and no other
+members, then any inferences made for type parameters referenced by the parameters of *T*'s call
+signature are ***fixed***, and *e*'s type is changed to a function type with *e*'s call signature instantiated
+in the context of *T*'s call signature (section 3.8.5).
 
 In the example
 
@@ -566,8 +566,8 @@ function choose<T>(x: T, y: T): T {
 var x = choose("Five", 5);
 ```
 
-inferences for `T` in the call to `choose` are made as follows: For the first parameter, an inference is made
-from type `string` to `T`. For the second parameter, an inference is made from type `number` to `T`. Since
+inferences for *T* in the call to `choose` are made as follows: For the first parameter, an inference is made
+from type `string` to *T*. For the second parameter, an inference is made from type `number` to *T*. Since
 the best common type (section 3.10) of `string` and `number` is the empty object type, the call to `choose`
 is equivalent to
 
@@ -622,8 +622,6 @@ var pairs = zip(names, ages, s => n => ({ name: s, age: n }));
 inferences for `S`, `T` and `U` in the call to `zip` are made as follows: Using the first two parameters,
 inferences of `string` for `S` and `number` for `T` are made. For the third parameter, inferential typing of the
 outer arrow expression causes `S` to become fixed such that the inferred type `string` can be used for the
-
-
 parameter `s`. When a function expression is inferentially typed, its return expression(s) are also
 inferentially typed. Thus, the inner arrow function is inferentially typed, causing `T` to become fixed such
 that the inferred type `number` can be used for the parameter `n`. The return type of the inner arrow
@@ -684,12 +682,12 @@ assertion expressions are purely a compile-time construct. Type assertions are n
 and have no impact on the emitted JavaScript (and therefore no run-time cost). The type and the
 enclosing < and > are simply removed from the generated code.
 
-In a type assertion expression of the form < T > e, e is contextually typed (section 4.19) by T and the
-resulting type of e is required to be assignable to T, or T is required to be assignable to the widened form
-of the resulting type of e, or otherwise a compile-time error occurs. The type of the result is T.
+In a type assertion expression of the form < *T* > *e*, *e* is contextually typed (section 4.19) by *T* and the
+resulting type of *e* is required to be assignable to *T*, or *T* is required to be assignable to the widened form
+of the resulting type of *e*, or otherwise a compile-time error occurs. The type of the result is *T*.
 
 Type assertions check for assignment compatibility in both directions. Thus, type assertions allow type
-conversions that might be correct, but aren't known to be correct. In the example
+conversions that *might* be correct, but aren't known to be correct. In the example
 
 ```typescript
 class Shape { ... }
@@ -731,7 +729,7 @@ These operators, in prefix or postfix form, require their operand to be of type 
 type, or an enum type, and classified as a reference (section 4.1). They produce a result of the Number
 primitive type.
 
-### 4.14.2 The +, ., and ~ operators
+### 4.14.2 The +, -, and ~ operators
 
 These operators permit their operand to be of any type and produce a result of the Number primitive
 type.
@@ -798,20 +796,20 @@ and the result of the operation defaults to type any in further processing. Tabl
 compile-time processing rules for operands of the Any type, the Boolean, Number, and String primitive
 types, and all object types and type parameters (the Object column in the tables) are provided.
 
-### 4.15.1 The *, /, %, ., <<, >>, >>>, &, ^, and | operators
+### 4.15.1 The *, /, %, -, <<, >>, >>>, &, ^, and | operators
 
 These operators require their operands to be of type Any, the Number primitive type, or an enum type.
-Operands of an enum type are treated as having the primitive type Number. If one operand is the null or
-undefined value, it is treated as having the type of the other operand. The result is always of the Number
+Operands of an enum type are treated as having the primitive type Number. If one operand is the `null` or
+`undefined` value, it is treated as having the type of the other operand. The result is always of the Number
 primitive type.
 
 | | Any | Boolean | Number | String | Object |
 | ---- | ---- | ---- | ---- | ---- | ---- |
-| Any | Number | | Number | | |
-| Boolean | | | | | |
-| Number | Number | | Number | | |
-| String | | | | | |
-| Object | | | | | |
+| **Any** | Number | | Number | | |
+| **Boolean** | | | | | |
+| **Number** | Number | | Number | | |
+| **String** | | | | | |
+| **Object** | | | | | |
 
 
 ### 4.15.2 The + operator
@@ -825,11 +823,11 @@ String primitive type. Otherwise, the result is of type Any.
 
 | | Any | Boolean | Number | String | Object |
 | ---- | ---- | ---- | ---- | ---- | ---- |
-| Any | Any | Any | Any | String | Any |
-| Boolean | Any | | | String | |
-| Number | Any | | Number | String | |
-| String | String | String | String | String | String |
-| Object | Any | | | | |
+| **Any** | Any | Any | Any | String | Any |
+| **Boolean** | Any | | | String | |
+| **Number** | Any | | Number | String | |
+| **String** | String | String | String | String | String |
+| **Object** | Any | | | | |
 
 A value of any type can converted to the String primitive type by adding an empty string:
 
@@ -849,11 +847,11 @@ result is always of the Boolean primitive type.
 
 | | Any | Boolean | Number | String | Object |
 | ---- | ---- | ---- | ---- | ---- | ---- |
-| Any | Boolean | Boolean | Boolean | Boolean | Boolean |
-| Boolean | Boolean | Boolean | | | |
-| Number | Boolean | | Boolean | | |
-| String | Boolean | | | Boolean | |
-| Object | Boolean | | | | Boolean |
+| **Any** | Boolean | Boolean | Boolean | Boolean | Boolean |
+| **Boolean** | Boolean | Boolean | | | |
+| **Number** | Boolean | | Boolean | | |
+| **String** | Boolean | | | Boolean | |
+| **Object** | Boolean | | | | Boolean |
 
 
 ### 4.15.4 The instanceof operator
@@ -878,11 +876,11 @@ second operand.
 
 | | Any | Boolean | Number | String | Object |
 | ---- | ---- | ---- | ---- | ---- | ---- |
-| Any | Any | Boolean | Number | String | Object |
-| Boolean | Any | Boolean | Number | String | Object |
-| Number | Any | Boolean | Number | String | Object |
-| String | Any | Boolean | Number | String | Object |
-| Object | Any | Boolean | Number | String | Object |
+| **Any** | Any | Boolean | Number | String | Object |
+| **Boolean** | Any | Boolean | Number | String | Object |
+| **Number** | Any | Boolean | Number | String | Object |
+| **String** | Any | Boolean | Number | String | Object |
+| **Object** | Any | Boolean | Number | String | Object |
 
 
 ### 4.15.7 The || operator
@@ -898,11 +896,11 @@ operand and the result is of the best common type of the two operand types.
 
 | | Any | Boolean | Number | String | Object |
 | ---- | ---- | ---- | ---- | ---- | ---- |
-| Any | Any | Any | Any | Any | Any |
-| Boolean | Any | Boolean | {} | {} | {} |
-| Number | Any | {} | Number | {} | {} |
-| String | Any | {} | {} | String | {} |
-| Object | Any | {} | {} | {} | Object |
+| **Any** | Any | Any | Any | Any | Any |
+| **Boolean** | Any | Boolean | {} | {} | {} |
+| **Number** | Any | {} | Number | {} | {} |
+| **String** | Any | {} | {} | String | {} |
+| **Object** | Any | {} | {} | {} | Object |
 
 
 ## 4.16 The Conditional Operator
@@ -913,15 +911,15 @@ In a conditional expression of the form
 Cond ? Expr1 : Expr2
 ```
 
-the Cond expression may be of any type.
+the *Cond* expression may be of any type.
 
-If the conditional expression is contextually typed (section 4.19), Expr1 and Expr2 are contextually typed by
+If the conditional expression is contextually typed (section 4.19), *Expr1* and *Expr2* are contextually typed by
 the same type and the result is of the best common type (section 3.10) of the contextual type and the
-types of Expr1 and Expr2. An error occurs if the best common type is not identical to at least one of the
+types of *Expr1* and *Expr2*. An error occurs if the best common type is not identical to at least one of the
 three candidate types.
 
 If the conditional expression is not contextually typed, the result is of the best common type of the types
-of Expr1 and Expr2. An error occurs if the best common type is not identical to at least one of the two
+of *Expr1* and *Expr2*. An error occurs if the best common type is not identical to at least one of the two
 candidate types.
 
 ## 4.17 Assignment Operators
@@ -932,9 +930,9 @@ An assignment of the form
 VarExpr = ValueExpr
 ```
 
-requires VarExpr to be classified as a reference (section 4.1). ValueExpr is contextually typed (section 4.19)
-by the type of VarExpr, and the type of ValueExpr must be assignable to (section 3.8.4) the type of
-VarExpr, or otherwise a compile-time error occurs. The result is a value with the type of ValueExpr.
+requires *VarExpr* to be classified as a reference (section 4.1). *ValueExpr* is contextually typed (section 4.19)
+by the type of *VarExpr*, and the type of *ValueExpr* must be assignable to (section 3.8.4) the type of
+*VarExpr*, or otherwise a compile-time error occurs. The result is a value with the type of *ValueExpr*.
 
 A compound assignment of the form
 
@@ -942,16 +940,16 @@ A compound assignment of the form
 VarExpr Operator= ValueExpr
 ```
 
-where Operator= is of the compound assignment operators
+where *Operator*= is of the compound assignment operators
 
 ```
 *= /= %= += -= <<= >>= >>>= &= ^= |=
 ```
 
 is subject to the same requirements, and produces a value of the same type, as the corresponding non-
-compound operation. A compound assignment furthermore requires VarExpr to be classified as a
+compound operation. A compound assignment furthermore requires *VarExpr* to be classified as a
 reference (section 4.1) and the type of the non-compound operation to be assignable to the type of
-VarExpr.
+*VarExpr*.
 
 ## 4.18 The Comma Operator
 
@@ -981,7 +979,7 @@ assigned. Contextual typing occurs in the following situations:
 initializer expression is contextually typed by the type of the variable, parameter, or property.
 * In return statements, if the containing function includes a return type annotation, return
 expressions are contextually typed by that return type. Otherwise, if the containing function is
-contextually typed by a type T, return expressions are contextually typed by T's return type.
+contextually typed by a type *T*, return expressions are contextually typed by *T*'s return type.
 * In typed function calls, argument expressions are contextually typed by their parameter types.
 * In type assertions, the expression is contextually typed by the indicated type.
 * In || operator expressions without a contextual type, the right hand expression is contextually
@@ -996,22 +994,22 @@ element type.
 * In contextually typed conditional operator expressions, the operands are contextually typed as
 well.
 
-Contextual typing of an expression e by a type T proceeds as follows:
+Contextual typing of an expression *e* by a type *T* proceeds as follows:
 
-* If e is an ObjectLiteral and T is an object type, e is processed with the contextual type T, as
+* If *e* is an *ObjectLiteral* and *T* is an object type, *e* is processed with the contextual type *T*, as
 described in section 4.5.
-* If e is an ArrayLiteral and T is an object type with a numeric index signature, e is processed with
-the contextual type T, as described in section 4.6.
-* If e is a *FunctionExpression* or *ArrowFunctionExpression* with no type parameters and no parameter
-or return type annotations, T is a function type with exactly one call signature and T's call
+* If *e* is an *ArrayLiteral* and *T* is an object type with a numeric index signature, *e* is processed with
+the contextual type *T*, as described in section 4.6.
+* If *e* is a *FunctionExpression* or *ArrowFunctionExpression* with no type parameters and no parameter
+or return type annotations, *T* is a function type with exactly one call signature and *T*'s call
 signature is non-generic, then any inferences made for type parameters referenced by the
-parameters of T's call signature are fixed (section 4.12.2) and e is processed with the contextual
-type T, as described in section 4.9.3.
-* If e is a || operator expression and T is an object type, e is processed with the contextual type T, as
+parameters of *T*'s call signature are fixed (section 4.12.2) and *e* is processed with the contextual
+type *T*, as described in section 4.9.3.
+* If *e* is a || operator expression and *T* is an object type, *e* is processed with the contextual type *T*, as
 described in section 4.15.7.
-* If e is a conditional operator expression and T is an object type, e is processed with the contextual
-type T, as described in section 4.16.
-* Otherwise, e is processed without a contextual type.
+* If *e* is a conditional operator expression and *T* is an object type, *e* is processed with the contextual
+type *T*, as described in section 4.16.
+* Otherwise, *e* is processed without a contextual type.
 
 The rules above require expressions be of the exact syntactic forms specified in order to be processed as
 contextually typed constructs. For example, given the declaration of the variable `f` above, the assignment
@@ -1054,5 +1052,5 @@ setEventHandlers({
 
 the object literal passed to `setEventHandlers` is contextually typed to the `EventHandlers` type. This
 causes the two property assignments to be contextually typed to the unnamed function type `(event:
-EventObject) => void`, which in turn causes the `e` parameters in the arrow function expressions to
+EventObject) => void`, which in turn causes the `*e*` parameters in the arrow function expressions to
 automatically be typed as `EventObject`.
