--- a/en/ch05.md
+++ b/en/ch05.md
@@ -84,7 +84,7 @@ In a `for-in` statement of the form
 for (Var in Expr) Statement
 ```
 
-Var must be an expression classified as a reference of type Any or the String primitive type, and Expr must
+Var must be an expression classified as a reference of type Any or the String primitive type, and *Expr* must
 be an expression of type Any, an object type, or a type parameter type.
 
 In a `for-in` statement of the form
@@ -93,8 +93,8 @@ In a `for-in` statement of the form
 for (var VarDecl in Expr) Statement
 ```
 
-VarDecl must be a variable declaration without a type annotation that declares a variable of type Any, and
-Expr must be an expression of type Any, an object type, or a type parameter type.
+*VarDecl* must be a variable declaration without a type annotation that declares a variable of type Any, and
+*Expr* must be an expression of type Any, an object type, or a type parameter type.
 
 ## 5.5 Continue Statements
 
@@ -122,7 +122,7 @@ any function, regardless of the return type of the function.
 When a `return` statement includes an expression, if the containing function includes a return type
 annotation, the return expression is contextually typed (section 4.19) by that return type and must be of a
 type that is assignable to the return type. Otherwise, if the containing function is contextually typed by a
-type T, Expr is contextually typed by T's return type.
+type T, *Expr* is contextually typed by T's return type.
 
 In a function implementation without a return type annotation, the return type is inferred from the `return`
 statements in the function body, as described in section 6.3.
