Fix annotation of ch04

--- a/en/ch04.md
+++ b/en/ch04.md
@@ -183,7 +183,7 @@ CallExpression: ( Modified )
 Super calls consist of the keyword super followed by an argument list enclosed in parentheses. Super
 calls are only permitted in constructors of derived classes, as described in section 8.3.2.
 
-A super call invokes the constructor of the base class on the instance referenced by this. A super call is
+A super call invokes the constructor of the base class on the instance referenced by `this`. A super call is
 processed as a function call (section 4.12) using the construct signatures of the base class constructor
 function type as the initial set of candidate signatures for overload resolution. Type arguments cannot be
 explicitly specified in a super call. If the base class is a generic class, the type arguments used to process a
@@ -256,7 +256,7 @@ except that function expressions do not support overloading.
 ### 4.9.1 Standard Function Expressions
 
 Standard function expressions are function expressions written with the `function` keyword. The type of
-this in a standard function expression is the Any type.
+`this` in a standard function expression is the Any type.
 
 Standard function expressions are transformed to JavaScript in the same manner as function declarations
 (see section 6.5).
@@ -265,7 +265,7 @@ Standard function expressions are transformed to JavaScript in the same manner a
 
 TypeScript supports ***arrow function expressions***, a new feature planned for ECMAScript 6. Arrow
 function expressions are a compact form of function expressions that omit the `function` keyword and
-have lexical scoping of this.
+have lexical scoping of `this`.
 
 An arrow function expression of the form
 
@@ -302,7 +302,7 @@ x => { return Math.sin(x); }
 x => Math.sin(x)
 ```
 
-A function expression using the function keyword introduces a new dynamically bound `this`, whereas
+A function expression using the `function` keyword introduces a new dynamically bound `this`, whereas
 an arrow function expression preserves the `this` of its enclosing context. Arrow function expressions are
 particularly useful for writing callbacks, which otherwise often have an undefined or unexpected `this.`
 
