--- a/en/ch06.md
+++ b/en/ch06.md
@@ -78,12 +78,12 @@ Note that the signature of the actual function implementation is not included in
 ## 6.3 Function Implementations
 
 A function implementation without a return type annotation is said to be an ***implicitly typed function***.
-The return type of an implicitly typed function f is inferred from its function body as follows:
+The return type of an implicitly typed function *f* is inferred from its function body as follows:
 
-* If there are no return statements with expressions in f's function body, the inferred return type is
+* If there are no return statements with expressions in *f*'s function body, the inferred return type is
 Void.
-* Otherwise, if f's function body directly references f or references any implicitly typed functions
-that through this same analysis reference f, the inferred return type is Any.
+* Otherwise, if *f*'s function body directly references *f* or references any implicitly typed functions
+that through this same analysis reference *f*, the inferred return type is Any.
 * Otherwise, the inferred return type is the widened form (section 3.9) of the best common type
 (section 3.10) of the types of the return statement expression in the function body, ignoring
 return statements with no expressions. A compile-time error occurs if the best common type isn't
@@ -208,17 +208,17 @@ function <FunctionName>(<FunctionParameters>) {
 }
 ```
 
-FunctionName is the name of the function (or nothing in the case of a function expression).
+*FunctionName* is the name of the function (or nothing in the case of a function expression).
 
-FunctionParameters is a comma separated list of the function's parameter names.
+*FunctionParameters* is a comma separated list of the function's parameter names.
 
-DefaultValueAssignments is a sequence of default property value assignments, one for each parameter
+*DefaultValueAssignments* is a sequence of default property value assignments, one for each parameter
 with a default value, in the order they are declared, of the form
 
 ```javascript
 if (typeof <Parameter> === "undefined") { <Parameter> = <Default>; }
 ```
 
-where Parameter is the parameter name and Default is the default value expression.
+where *Parameter* is the parameter name and *Default* is the default value expression.
 
-FunctionStatements is the code generated for the statements specified in the function body.
+*FunctionStatements* is the code generated for the statements specified in the function body.
